cmake_minimum_required(VERSION 3.0.0)
project(LeetCode VERSION 0.1.0)

# include(CTest)
# enable_testing()

set(CMAKE_CXX_FLAGS "-std=c++11")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_executable(001_two_sum 001_two_sum.cc)
add_executable(167_two_sum_II 167_two_sum_II.cc)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
# include(CPack)
